--- a/src/styles/components/Form.module.css
+++ b/src/styles/components/Form.module.css
@@ -87,6 +87,7 @@
     border-radius: 4px;
     transition: all 0.5s ease;
     border: none;
+    outline: none;
 }
 
 .card form input[type="submit"]:hover {
